# code-analysis

./: .clang-format  .gitmodules  README.md  develop.py  main.ipynb  main.py  makefile  pyproject.toml  readme.md
config/: logging.conf
js_textmate_server/: index.js  package.json  pnpm-lock.yaml  testClient.js  testTm.js  test_code.txt  utils.js
protos/: text_mate.proto
src/: utils.py
src/jdk/: logic.py
src/linux_kernel/: logic.py  utils.py
src/linux_kernel_v2/: logic.py  utils.py
src/protos/: text_mate_pb2.py  text_mate_pb2.pyi  text_mate_pb2_grpc.py
tests/: test_grpc.py  test_linux_extract.py
tests/data/2024/: comp_client_err.cc  core_wildfire.json  kallsyms_selftest.json  test.c  tsid_plain.cpp
